mejora en la programacion reactiva

--- a/src/app/core/components/layout/layout.component.css
+++ b/src/app/core/components/layout/layout.component.css
@@ -41,3 +41,16 @@ section {
 .not-approved {
     color: rgb(238, 38, 38);
 }
+
+.list-star {
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    margin-left: 28px;
+}
+
+.list-star h4 {
+    margin-bottom: 20px;
+}
