--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,5 +1,19 @@
 <div class="app-layout-container">
   <div class="section-container">
+    <h1>Listado de Alumnos</h1>
+    <section class="list-star">
+      <h4>Listado de mejores calificaciones</h4>
+      <div *ngFor="let student of startStudent" class="card mb-4" style="width: 15rem;">
+          <img class="card-img-top" src="../../../assets/profile-default.webp" width="100px" height="150px" alt="Card image cap">
+          <div class="student-data">
+            <strong>{{ student.firstName + ' ' + student.lastName  }}</strong>
+            <span>DNI: {{ student.id }}</span>
+            <span>Fecha de entrega: {{ student.date_of_delivery | date:"dd/MM/yy" }}</span>
+            <span class="approved">Final: {{ student.qualification }}</span>
+          </div>
+      </div>
+    </section>
+    <hr>
     <section>
         <div *ngFor="let student of studentList$ | async" class="card mb-4" style="width: 15rem;">
             <img class="card-img-top" src="../../../assets/profile-default.webp" width="100px" height="150px" alt="Card image cap">
